--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
   "manifest_version": 2,
-  "name": "Offline Cashbook",
+  "name": "KaashBook",
   "version": "1.0",
-  "description": "An offline cashbook extension using SQLite for storing transactions.",
-  "permissions": ["storage", "tabs"],
+  "description": "A simple offline cashbook extension to keep your daily transactions, within your Firefox browser!.",
+  "permissions": ["storage", "tabs", "unlimitedStorage"],
   "background": {
-    "scripts": ["worker.js"],
+    "scripts": ["worker.js", "background.js"],
     "persistent": false
   },
   "sidebar_action": {
-    "default_icon": "icons/star.png",
-    "default_title": "Annotator",
+    "default_icon": "icons/KaashBook-Logo.png",
+    "default_title": "KaashBook",
     "default_panel": "index.html"
   },
   "content_scripts": [
@@ -20,16 +20,15 @@
     }
   ],
   "browser_action": {
-    "default_popup": "index.html",
+    "default_title": "Open Cash Register",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "48": "icons/KaashBook-Logo.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  }
+    "48": "icons/KaashBook-Logo.png"
+  },
+
+  "web_accessible_resources": ["worker.js"],
+  "content_security_policy": "script-src 'self'; object-src 'self'"
 }
